--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
   </head>
   <body>
-    <header class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="todo">
-      <a class="more_inf" 
+    <header class="header">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="todo">
+      <a class="header__link-more-info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?
       </a>
