--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
           Want more details?
       </a>
     </header>
-    <main class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
+    <main class="todo-list">
+      <p>
+        <h3 class="todo-list__title todo-list__title_add">Add Item</h3>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
           <button>Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="todo-list__title" >Todo</h3>
       <ul id="incompleteTasks">
         <li>
           <input type="checkbox">
@@ -41,7 +41,7 @@
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="todo-list__title">Completed</h3>
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
