--- a/index.html
+++ b/index.html
@@ -13,42 +13,42 @@
       </a>
     </header>
     <main class="todo-list">
-      <p>
+      <p class="add-item">
         <h3 class="todo-list__title todo-list__title_add">Add Item</h3>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+        <div class="add-item__row task-row-wrapper">
+          <input id="new-task" class="add-item__input" type="text">
+          <button class="add-item__button-add">Add</button>
         </div>
       </p>
       <h3 class="todo-list__title" >Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+      <ul id="incomplete-tasks" class="incomplete-tasks">
+        <li class="incomplete-tasks__li li" >
+          <input class="li__checkbox" type="checkbox">
+          <label class="li__label">Pay Bills</label>
+          <input class="li__input" type="text">
+          <button class="li__button-edit">Edit</button>
+          <button class="li__button-delete">
             <img src="./remove.svg" alt="remove">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+        <li class="incomplete-tasks__li li editMode">
+          <input class="li__checkbox" type="checkbox">
+          <label class="li__label">Go Shopping</label>
+          <input class="li__input" type="text" value="Go Shopping">
+          <button class="li__button-edit">Save</button>
+          <button class="li__button-delete">
             <img src="./remove.svg" alt="remove">
           </button>
         </li>
       </ul>
       <h3 class="todo-list__title">Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+      <ul id="completed-tasks" class="complete-tasks" >
+        <li class="completed-tasks__li li">
+          <input class="li__checkbox" type="checkbox" checked>
+          <label class="li__label">See the Doctor</label>
+          <input class="li__input" type="text" >
+          <button class="li__button-edit">Edit</button>
+          <button class="li__button-delete">
             <img src="./remove.svg" alt="remove">
           </button>
         </li>
