refactor: change tags by classnames according to rule 3.4 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <input class="li__input" type="text">
           <button class="li__button-edit">Edit</button>
           <button class="li__button-delete">
-            <img src="./remove.svg" alt="remove">
+            <img class="li__image-delete" src="./remove.svg" alt="remove">
           </button>
         </li>
         <li class="incomplete-tasks__li li editMode">
@@ -37,7 +37,7 @@
           <input class="li__input" type="text" value="Go Shopping">
           <button class="li__button-edit">Save</button>
           <button class="li__button-delete">
-            <img src="./remove.svg" alt="remove">
+            <img class="li__image-delete" src="./remove.svg" alt="remove">
           </button>
         </li>
       </ul>
@@ -49,7 +49,7 @@
           <input class="li__input" type="text" >
           <button class="li__button-edit">Edit</button>
           <button class="li__button-delete">
-            <img src="./remove.svg" alt="remove">
+            <img class="li__image-delete" src="./remove.svg" alt="remove">
           </button>
         </li>
       </ul>
