--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main class="todo-list">
       <p class="add-item">
-        <h3 class="todo-list__title todo-list__title_add">Add Item</h3>
+        <label for="new-task" class="todo-list__title todo-list__title_add">Add Item</label>
         <div class="add-item__row task-row-wrapper">
           <input id="new-task" class="add-item__input" type="text">
           <button class="add-item__button-add">Add</button>
