fix: delete task-row-wrapper according rule 3.1 html-css.md

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="todo-list">
       <p class="add-item">
         <label for="new-task" class="todo-list__title todo-list__title_add">Add Item</label>
-        <div class="add-item__row task-row-wrapper">
+        <div class="add-item__row">
           <input id="new-task" class="add-item__input" type="text">
           <button class="add-item__button-add">Add</button>
         </div>
