refactor: BEM according to rule 2.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           </li>
         </ul>
       </section>
-      <section class="complete-tasks">
-        <h3 class="complete-tasks__title title">Completed</h3>
-        <ul id="completed-tasks-list" class="complete-tasks__list" >
+      <section class="completed-tasks">
+        <h3 class="completed-tasks__title title">Completed</h3>
+        <ul id="completed-tasks-list" class="completed-tasks__list" >
           <li class="completed-tasks__li li">
             <input class="li__checkbox" type="checkbox" checked>
             <label class="li__label">See the Doctor</label>
